# HorusBot

./: .gitignore  Instrukcja.txt  README.md  discord_roles.txt  emote_authors.json  idea_authors.json  init.py  news_authors.json  pyproject.toml  requirements.txt  varrakas.json  weekly_ranking.json
cogs/: discord_roles.txt  emote_voting.py  functions_kick.py  functions_twitch.py  general.py  ideas_voting.py  info_commands.py  kick_sync.py  messages_analysis.py  news.py  reminders.py  twitch_sync.py  voting.py
functions/: functions_general.py  functions_kick.py  functions_twitch.py
globals/: globalvariables.py
